1. Улучшения Collection API [#290178]