@@ -10,8 +10,8 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("K2/SK2/SSK2");
-        List<String> expect = Arrays.asList("K2", "K2/SK2", "K2/SK2/SSK2");
+        List<String> input = List.of("K2/SK2/SSK2");
+        List<String> expect = List.of("K2", "K2/SK2", "K2/SK2/SSK2");
         List<String> result = Departments.fillGaps(input);
         result.sort(Comparator.naturalOrder());
         assertThat(result, is(expect));
@@ -19,8 +19,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         result.sort(Comparator.naturalOrder());
         assertThat(result, is(expect));
