@@ -5,6 +5,7 @@ import org.junit.Test;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.*;
@@ -13,7 +14,7 @@ public class Student2Test {
 
     @Test
     public void toMapTest() {
-        List<Student> students = Arrays.asList(
+        List<Student> students = List.of(
                 new Student("Aaaa", 99),
                 new Student("Aaaa", 99),
                 new Student("Bbbb", 51),
@@ -21,11 +22,12 @@ public class Student2Test {
                 new Student("Cccc", 48)
         );
 
-        HashMap<String, Student> exp = new HashMap<>();
-        exp.put("Aaaa", new Student("Aaaa", 99));
-        exp.put("Bbbb", new Student("Bbbb", 51));
-        exp.put("Cccc", new Student("Cccc", 48));
-        HashMap<String, Student> rsl = (HashMap<String, Student>) Student2.toMap(students);
+        Map<String, Student> exp = Map.of(
+                "Aaaa", new Student("Aaaa", 99),
+                "Bbbb", new Student("Bbbb", 51),
+                "Cccc", new Student("Cccc", 48)
+        );
+        Map<String, Student> rsl = Student2.toMap(students);
         assertThat(exp, is(rsl));
     }
 
